--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Flask==0.12.2
 Flask-Migrate==2.0.3
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.2
+gunicorn==19.7.1
 ipython==6.0.0
 ipython-genutils==0.2.0
 itsdangerous==0.24
